Add basic canvas and mouse input

--- a/index.html
+++ b/index.html
@@ -14,25 +14,8 @@
   <h1>Bull, China Shop</h1>
 </header>
 <main>
+  <canvas id="canvas" />
   <output id="console"></output>
-  <table>
-    <tr>
-      <th>Fruit</th>
-      <th>Colour</th>
-    </tr>
-    <tr>
-      <td><a href="#">Apple</a></td>
-      <td>Red, Green</td>
-    </tr>
-    <tr>
-      <td><a href="#">Banana</a></td>
-      <td>Yellow, Green</td>
-    </tr>
-    <tr>
-      <td><a href="#">Cherry</a></td>
-      <td>Red</td>
-    </tr>
-  </table>
 </main>
 <footer>2020</footer>
 </div><!--/#app-->
